<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"
    android:theme="@style/AppThemeSubs"
    tools:context=".features.auth.login.LoginActivity">

<!--    <include layout="@layout/toolbar_default_icon" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/icon_uin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:text="@string/signin"
            android:textColor="@color/color_default_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldNik"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="NIDN / NIK"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            app:boxStrokeColor="@color/color_default_blue"
            app:hintTextColor="@color/color_default_black"
            app:startIconDrawable="@drawable/ic_card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/color_default_black"
                android:textSize="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pass"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            app:boxStrokeColor="@color/color_default_blue"
            app:hintTextColor="@color/color_default_black"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_unlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/color_default_black"
                android:textSize="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            app:backgroundTint="@color/color_default_blue" />

        <Button
            android:id="@+id/mBtnRegis"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_regist"
            android:textAllCaps="false"
            android:textColor="@color/color_default_black"
            android:textSize="13dp"
            app:rippleColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="#8025A0E1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright" />

    </LinearLayout>

</LinearLayout>